# flare-ai-defai

./: .env.example  .fullstack.Dockerfile  .gitignore  Dockerfile  README.md  default.conf  nginx.conf  pyproject.toml  supervisord.conf  test.txt
.github/workflows/: build_and_push.yml  lint.yml
chat-ui/: package-lock.json  package.json
chat-ui/src/: App.js
src/: README.md
src/flare_ai_core/: __init__.py  app.py  config.py  main.py  settings.py
src/flare_ai_core/ai/: __init__.py  gemini.py  openrouter.py
src/flare_ai_core/ai_service/: gemini.py  openrouter.py
src/flare_ai_core/api/: __init__.py  chat.py
src/flare_ai_core/api/routes/: chat.py
src/flare_ai_core/attestation/: __init__.py  vtpm_attestation.py
src/flare_ai_core/attestation_service/: vtpm_attestation.py  vtpm_validation.py
src/flare_ai_core/blockchain/: flare.py
src/flare_ai_core/blockchain_service/: flare.py
src/flare_ai_core/models/: __init__.py  config.py  gemini.py  prompt_library.py
src/flare_ai_core/onchain/: __init__.py  account.py  config.py
src/flare_ai_core/prompt_service/: __init__.py  library.py  prompt_service.py  templates.py
src/flare_ai_core/prompts/: library.py  schemas.py  service.py  templates.py
src/flare_ai_defai/ai/: base.py  openrouter.py
src/flare_ai_defai/prompts/: library.py  schemas.py  service.py
tests/: conftest.py  test_ai_service.py  test_blockchain_service.py  test_prompts.py
